<resources>
    <string name="app_name">Project-S-Android</string>

    <!-- LOGIN SCREEN -->
    <string name="login_text_field">Login</string>
    <string name="password_text_field">Password</string>
    <string name="login_button">Sign in</string>

    <!-- ARTICLES SCREEN -->
    <string name="articles_new_article">New article</string>

    <!-- TOOLBAR -->
    <string name="articles_export_content">Export</string>
    <string name="articles_list_content">Articles</string>
    <string name="about">About</string>

    <!-- NEW ARTICLES SCREEN -->
    <string name="new_article_title">Title</string>
    <string name="new_article_content">Content...</string>
    <string name="new_article_save">Save</string>
    <string name="new_article_back">Back</string>

    <!-- ABOUT STRING -->
    <string name="about_licence_notes_title">Licence Notes</string>
    <string name="about_licence_notes_text">Licence Notes Text</string>

    <!-- EXPORTER ACTIVITY -->
    <string name="export_JSON_button">EXPORT JSON</string>
</resources>
