<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/new_article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_article_title" />

    <EditText
        android:id="@+id/new_article_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:scrollbars="vertical"
        android:hint="@string/new_article_content"
        android:gravity="top"/>

    <Button
        android:id="@+id/new_article_button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_article_save"/>

</LinearLayout>